# ATAR_Central

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
com/: CMakeLists.txt  DataDestinationAlpha.cpp  DataDestinationBeta.cpp  DataDestinationUSB.cpp  DataSourceAlpha.cpp  DataSourceBeta.cpp
com/include/com/: DataDestinationAlpha.hpp  DataDestinationBeta.hpp  DataDestinationUSB.hpp  DataSourceAlpha.hpp  DataSourceBeta.hpp  SensorDataContainer.hpp
ctrl/: AlignmentController.cpp  CMakeLists.txt  DriveController.cpp  MotorSet.cpp  PIDController.cpp  SpeedController.cpp  TargetRotationController.cpp  TargetTranslationController.cpp
ctrl/include/ctrl/: AlignmentController.hpp  DriveController.hpp  MotorSet.hpp  PIDController.hpp  SpeedController.hpp  TargetRotationController.hpp  TargetTranslationController.hpp
